syntax = "proto3";
package candles;

message CacheCandleGrpcModel {
   CandleGrpcModel Candle = 1;
   string InstrumentId = 2;
   string Source = 3;
   CandleType CandleType = 4;
}
message CandleGrpcModel {
   uint64 DateTime = 1;
   double Open = 2;
   double Close = 3;
   double High = 4;
   double Low = 5;
   double Volume = 6;
}
enum CandleType {
   Minute = 0;
   Hour = 1;
   Day = 2;
   Month = 3;
}
message GetAllFromCacheGrpcRequest {
   bool IsBids = 1;
   string Source = 2;
}
message GetCandlesHistoryGrpcRequestContract {
   string Instrument = 1;
   uint64 From = 2;
   uint64 To = 3;
   CandleType CandleType = 4;
   bool Bid = 5;
   string Source = 6;
}
message GetLastCandlesGrpcRequestContract {
   string Instrument = 1;
   int32 Amount = 2;
   CandleType CandleType = 3;
   bool Bid = 4;
}
message IEnumerable_CandleGrpcModel {
   repeated CandleGrpcModel items = 1;
}
message ReloadInstrumentContract {
   string InstrumentId = 1;
   bool IsAsk = 2;
}
message ReloadInstrumentModel {
   bool Result = 1;
}
service SimpleTradingEngineGrpcService {
   rpc GetAllFromCache (GetAllFromCacheGrpcRequest) returns (stream CacheCandleGrpcModel);
   rpc GetCandlesHistory (GetCandlesHistoryGrpcRequestContract) returns (IEnumerable_CandleGrpcModel);
   rpc GetCandlesHistoryStream (GetCandlesHistoryGrpcRequestContract) returns (stream CandleGrpcModel);
   rpc GetLastCandles (GetLastCandlesGrpcRequestContract) returns (IEnumerable_CandleGrpcModel);
   rpc ReloadInstrument (ReloadInstrumentContract) returns (ReloadInstrumentModel);
}
